# ecos.torch

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  ecos-scm-1.rockspec  init.c  init.lua  test.lua
cmake/: USE_C99.cmake
